--- a/src/partials/answers.html
+++ b/src/partials/answers.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h2 class="answers__title title">Ответы на вопросы</h2>
     <div class="answers__accordions">
-      <div class="accordion accordion-answers--1 is-open">
+      <div class="accordion accordion-answers-1 is-open">
         <button class="accordion__control btn-reset">
           <span class="accordion__title">Нужен ли бюджет?</span>
           <span class="accordion__icon"></span>
@@ -17,7 +17,7 @@
             Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
         </div>
       </div>
-      <div class="accordion accordion-answers--2">
+      <div class="accordion accordion-answers-2">
         <button class="accordion__control btn-reset">
           <span class="accordion__title">Смогу ли я найти новые товары для продажи?</span>
           <span class="accordion__icon"></span>
@@ -33,7 +33,7 @@
             Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
         </div>
       </div>
-      <div class="accordion accordion-answers--3">
+      <div class="accordion accordion-answers-3">
         <button class="accordion__control btn-reset">
           <span class="accordion__title">Как понять, будет ли полезно это наставничество лично мне?</span>
           <span class="accordion__icon"></span>
@@ -49,7 +49,7 @@
             Но если вы хотите сильно, в разы, вырасти, то вам нужно будет вкладываться в товары и продвижение</p>
         </div>
       </div>
-      <div class="accordion accordion-answers--4">
+      <div class="accordion accordion-answers-4">
         <button class="accordion__control btn-reset">
           <span class="accordion__title">Почему это называется наставничество, а не курс?</span>
           <span class="accordion__icon"></span>
