--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__container container">
-    <nav class="header__nav nav" title="Основное меню">
+    <nav class="header__nav nav" title="Основное меню" data-menu>
       <ul class="nav__list list-reset">
         <li class="nav__item"><a href="#mentorship" data-scroll data-menu-item class="nav__link">Для кого</a></li>
         <li class="nav__item"><a href="#training" data-scroll data-menu-item class="nav__link">Формат</a></li>
@@ -12,5 +12,8 @@
     </nav>
     <button class="header__btn btn btn--stroke btn--stroke-full btn-reset" aria-label="Оставить заявку">Оставить
       заявку</button>
+    <button class="burger" aria-label="Открыть меню" aria-expanded="false" data-burger>
+      <span class="burger__line"></span>
+    </button>
   </div>
 </header>
