--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -23,8 +23,7 @@
       </ul>
       <div class="hero__btns">
         <button class="hero__btn btn btn-reset" aria-label="Принять участие">Принять участие</button>
-        <button class="hero__btn btn btn--stroke btn--stroke-full btn-reset"
-          aria-label="Наша программа">Программа</button>
+        <a class="hero__link btn btn--stroke btn--stroke-full" href="#program" data-scroll data-menu-item>Программа</a>
       </div>
     </div>
     <div class="hero__author">
