--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -150,10 +150,10 @@
       </div>
       <form class="apply__form">
         <label class="apply__label">
-          <input class="apply__input input-reset" type="text" name="name" placeholder="Имя">
+          <input class="apply__input input-name input-reset" type="text" name="name" placeholder="Имя">
         </label>
         <label class="apply__label">
-          <input class="apply__input input-reset" type="tel" name="phone" placeholder="Телефон">
+          <input class="apply__input input-tel input-reset" type="tel" name="phone" placeholder="Телефон">
         </label>
         <button class="apply__btn btn btn-reset" type="submit" aria-label="Оставить заявку на диагностику">Оставить
           заявку на диагностику</button>
