--- a/src/partials/speaker.html
+++ b/src/partials/speaker.html
@@ -33,7 +33,7 @@
       <div class="results-stat__slider swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <a class="results-stat__link" data-fslightbox="gallery" href="img/result-1_2x.jpg" aria-hidden="true">
+            <a class="results-stat__link" data-fslightbox="gallery-1" href="img/result-1_2x.jpg">
               <picture>
                 <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
                 <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
@@ -44,7 +44,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a class="results-stat__link" data-fslightbox="gallery" href="img/result-1_2x.jpg" aria-hidden="true">
+            <a class="results-stat__link" data-fslightbox="gallery-2" href="img/result-1_2x.jpg">
               <picture>
                 <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
                 <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
@@ -55,7 +55,7 @@
             </a>
           </div>
           <div class="swiper-slide">
-            <a class="results-stat__link" data-fslightbox="gallery" href="img/result-1_2x.jpg" aria-hidden="true">
+            <a class="results-stat__link" data-fslightbox="gallery-3" href="img/result-1_2x.jpg">
               <picture>
                 <source media="(min-width: 576px)" srcset="img/result-1_2x.webp 2x" type="image/webp">
                 <source media="(max-width: 575px)" srcset="img/result-1.webp" type="image/webp">
