--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -23,6 +23,7 @@
   --meteorite-color: #4c217a;
   --electric-color: #8900c9;
   --purple-color: #a58fbc;
+  --burder-bg-color: #341357;
 
   //gradient
   --main-gradient: linear-gradient(to left, #e5006d, #4c217a, #dc046d);
