--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,9 +4,18 @@
 
   &__container {
     @include flex-all-sb;
+
+    @include tablet {
+      justify-content: flex-end;
+    }
   }
 
   &__btn {
     max-width: 180px;
+    z-index: 10;
+
+    @include tablet {
+      display: none;
+    }
   }
 }
