--- a/src/scss/components/_tariffs.scss
+++ b/src/scss/components/_tariffs.scss
@@ -1,12 +1,22 @@
 .tariffs {
   background-color: var(--selago-color);
 
+  @include small-tablet {
+    padding-bottom: 100px;
+  }
+
   .swiper {
     overflow: visible;
   }
 
   .swiper-slide {
     height: auto;
+  }
+
+  &__items {
+    @include tablet {
+      padding-right: max(50px, (100% - var(--content-width)) / 2);
+    }
   }
 
   &__title {
@@ -139,5 +149,9 @@
   &__btn {
     margin: 0 auto;
     margin-top: auto;
+
+    @include mobile {
+      max-width: 160px;
+    }
   }
 }
