--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -5,6 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#111111">
   <title>Наставничество по WB</title>
+  <meta name="description"
+    content="У нас вы найдете обучение от наставника Сергея Поталинского по заработку на Wildberries (Вайлдберриз). Освойте все тонкости и стратегии успеха в онлайн-торговле, чтобы повысить свои доходы. Присоединяйтесь к нам уже сегодня!">
+  <meta name="keywords"
+    content="наставничество по WB, Сергей Поталинский, Wildberries, Вайлдберриз, заработок, онлайн-торговля, обучение, доходы">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Сергей Поталинский">
   <link rel="preload" href="fonts/GilroyLight.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/GilroyRegular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/GilroyMedium.woff2" as="font" type="font/woff2" crossorigin>
