--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -55,7 +55,7 @@
       right: -40px;
       width: 580px;
       height: 852px;
-      background-image: url(../img/hero-image.png);
+      background-image: url(../img/hero-image.webp);
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
