--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -145,8 +145,8 @@
     <div class="program__apply apply">
       <div class="apply__content">
         <h5 class="apply__title">как стать участником?</h5>
-        <p class="apply__descr">Наставничество - формат работы, который не всем подходит. Поэтому я лично отбираю
-          каждого, с кем будем работать. Отбор начинается с диагностики вашего бизнеса</p>
+        <span class="apply__descr">Наставничество - формат работы, который не всем подходит. Поэтому я лично отбираю
+          каждого, с кем будем работать. Отбор начинается с диагностики вашего бизнеса</span>
       </div>
       <form class="apply__form">
         <label class="apply__label">
