--- a/src/partials/answers.html
+++ b/src/partials/answers.html
@@ -81,17 +81,15 @@
           <input class="apply__input input-reset" type="tel" name="phone" placeholder="Телефон"
             aria-label="Введите ваш телефон">
         </label>
-        <label class="apply__label">
-          <select class="apply__select" name="Удобный способ связи" aria-label="Выберите удобный способ связи">
-            <option value="">Удобный способ связи</option>
-            <option value="Telegram">Telegram</option>
-            <option value="WhatsApp">WhatsApp</option>
-          </select>
-        </label>
+        <select class="apply__select" name="Удобный способ связи" aria-label="Выберите удобный способ связи">
+          <option value="">Удобный способ связи</option>
+          <option value="Telegram">Telegram</option>
+          <option value="WhatsApp">WhatsApp</option>
+        </select>
         <label class="apply__label">
           <input class="apply__input input-reset" type="text" name="text" placeholder="Ваш магазин на WB"
             aria-label="Укажите ИП или введите ссылку на ваш сайт,если нет - оставьте поле пустым">
-          <p class="apply__info">Укажите ИП, название или ссылку (если нет — оставьте поле пустым)</p>
+          <span class="apply__info">Укажите ИП, название или ссылку (если нет — оставьте поле пустым)</span>
         </label>
         <button class="apply__btn btn btn-reset" type="submit" aria-label="Оставить заявку на диагностику">Оставить
           заявку на диагностику</button>
