--- a/src/scss/components/_apply.scss
+++ b/src/scss/components/_apply.scss
@@ -129,6 +129,10 @@
     }
   }
 
+  &__select {
+    margin-bottom: 20px;
+  }
+
   &__btn {
     max-width: 100%;
     margin-bottom: 12px;
@@ -158,6 +162,7 @@
   }
 
   &__info {
+    display: block;
     margin: 0;
     margin-top: 12px;
     font-weight: 400;
