--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -16,7 +16,7 @@
   <link rel="preload" href="fonts/GilroyMedium.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/GilroySemiBold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/GilroyBold.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="fonts/DelaGothicOneRegular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/YesevaOneRegular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
   <script defer src="js/main.js"></script>
