--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -148,12 +148,12 @@
         <span class="apply__descr">Наставничество - формат работы, который не всем подходит. Поэтому я лично отбираю
           каждого, с кем будем работать. Отбор начинается с диагностики вашего бизнеса</span>
       </div>
-      <form class="apply__form">
+      <form class="apply__form program-form">
         <label class="apply__label">
-          <input class="apply__input input-name input-reset" type="text" name="name" placeholder="Имя">
+          <input class="apply__input input-name-program input-reset" type="text" name="name" placeholder="Имя">
         </label>
         <label class="apply__label">
-          <input class="apply__input input-tel input-reset" type="tel" name="phone" placeholder="Телефон">
+          <input class="apply__input input-tel-program input-reset" type="tel" name="phone" placeholder="Телефон">
         </label>
         <button class="apply__btn btn btn-reset" type="submit" aria-label="Оставить заявку на диагностику">Оставить
           заявку на диагностику</button>
