--- a/src/partials/answers.html
+++ b/src/partials/answers.html
@@ -72,22 +72,21 @@
         <p class="apply__descr">На диагностике мы обсудим вашу ситуацию и бизнес и вы поймете, подходит ли вам это
           наставничество и сколько это стоит</p>
       </div>
-      <form class="apply__form">
+      <form class="apply__form answers-form">
         <label class="apply__label">
-          <input class="apply__input input-reset" type="text" name="name" placeholder="Имя"
+          <input class="apply__input input-reset input-name" type="text" name="name" placeholder="Имя"
             aria-label="Введите ваше имя">
         </label>
         <label class="apply__label">
-          <input class="apply__input input-reset" type="tel" name="phone" placeholder="Телефон"
+          <input class="apply__input input-reset input-tel" type="tel" name="phone" placeholder="Телефон"
             aria-label="Введите ваш телефон">
         </label>
-        <select class="apply__select" name="Удобный способ связи" aria-label="Выберите удобный способ связи">
-          <option value="">Удобный способ связи</option>
-          <option value="Telegram">Telegram</option>
-          <option value="WhatsApp">WhatsApp</option>
-        </select>
         <label class="apply__label">
-          <input class="apply__input input-reset" type="text" name="text" placeholder="Ваш магазин на WB"
+          <input class="apply__input input-reset input-email" type="email" name="email" placeholder="Email"
+            aria-label="Введите ваш Email">
+        </label>
+        <label class="apply__label">
+          <input class="apply__input input-reset input-name" type="text" name="text" placeholder="Ваш магазин на WB"
             aria-label="Укажите ИП или введите ссылку на ваш сайт,если нет - оставьте поле пустым">
           <span class="apply__info">Укажите ИП, название или ссылку (если нет — оставьте поле пустым)</span>
         </label>
