--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -3,4 +3,4 @@
 @include font-face("Gilroy", "../fonts/GilroyMedium", 500, normal);
 @include font-face("Gilroy", "../fonts/GilroySemiBold", 600, normal);
 @include font-face("Gilroy", "../fonts/GilroyBold", 700, normal);
-@include font-face("YesevaOne", "../fonts/YesevaOneRegular", 400, normal);
+@include font-face("Montserrat", "../fonts/MontserratBold", 700, normal);
