--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,7 +2,7 @@
 :root {
   // base
   --font-family: "Gilroy", sans-serif;
-  --second-family: "YesevaOne", sans-serif;
+  --second-family: "Montserrat", sans-serif;
   --content-width: 1180px;
   --container-offset: 15px;
   --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
