--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -79,7 +79,7 @@
   }
 
   &__content {
-    max-width: 720px;
+    max-width: 630px;
   }
 
   &__title {
@@ -88,28 +88,28 @@
     margin-bottom: 30px;
     max-width: 720px;
     font-family: var(--second-family);
-    font-weight: 400;
+    font-weight: 700;
     font-size: 50px;
     line-height: 65px;
     text-transform: uppercase;
     color: var(--light-color);
 
     @include small-tablet {
-      font-size: 35px;
-      line-height: 52px;
+      max-width: 100%;
+      font-size: 42px;
     }
 
     @include mobile {
       max-width: 300px;
-      font-size: 22px;
+      font-size: 24px;
       line-height: 29px;
     }
 
     &::before {
       content: "";
       position: absolute;
-      bottom: -22px;
-      right: 18px;
+      bottom: 0;
+      right: 0;
       width: 91px;
       height: 88px;
       background-image: url(../img/wb-logo.svg);
@@ -120,8 +120,6 @@
       @include mobile {
         width: 33px;
         height: 33px;
-        bottom: -10px;
-        right: -10px;
       }
     }
   }
@@ -211,7 +209,7 @@
 
   &__descr {
     font-family: var(--second-family);
-    font-weight: 400;
+    font-weight: 700;
     font-size: 20px;
     line-height: 29px;
     text-transform: uppercase;
