--- a/src/partials/answers.html
+++ b/src/partials/answers.html
@@ -1,6 +1,6 @@
 <section class="answers section-offset" id="answers">
   <div class="container">
-    <h2 class="answers__title title">Ответы на вопросы</h2>
+    <h2 class="answers__title title" data-aos="fade-left" data-aos-duration="1000">Ответы на вопросы</h2>
     <div class="answers__accordions">
       <div class="accordion accordion-answers-1 is-open">
         <button class="accordion__control btn-reset">
@@ -67,12 +67,12 @@
       </div>
     </div>
     <div class="answers__apply apply">
-      <div class="apply__content">
+      <div class="apply__content" data-aos="fade-left" data-aos-duration="1000">
         <h3 class="apply__title">Заявка на диагностику</h3>
         <p class="apply__descr">На диагностике мы обсудим вашу ситуацию и бизнес и вы поймете, подходит ли вам это
           наставничество и сколько это стоит</p>
       </div>
-      <form class="apply__form answers-form">
+      <form class="apply__form answers-form" data-aos="fade-right" data-aos-duration="1000">
         <label class="apply__label">
           <input class="apply__input input-reset input-name" type="text" name="name" placeholder="Имя"
             aria-label="Введите ваше имя">
