--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
 <section class="hero">
   <div class="hero__container container">
-    <div class="hero__content">
+    <div class="hero__content" data-aos="fade-left" data-aos-offset="500" data-aos-duration="1000">
       <h1 class="hero__title">Групповое наставничество
         по продажам на</h1>
       <p class="hero__text">Помогаю выйти на оборот от <span class="hero__price">1 000 000 ₽</span> в месяц</p>
