--- a/src/partials/mentorship.html
+++ b/src/partials/mentorship.html
@@ -2,20 +2,20 @@
   <div class="container">
     <h2 class="mentorship__title title">Кому подойдёт наставничество</h2>
     <ul class="mentorship__list list-reset grid">
-      <li class="mentorship__item mentorship__item--spec">
+      <li class="mentorship__item mentorship__item--spec" data-aos="fade-left" data-aos-duration="1000">
         <h3 class="mentorship__subtitle">Специалистам</h3>
         <p class="mentorship__descr">Продавцам, которые вышли на ежемесячные обороты 200–600 тыс. руб. и хотят вырасти
           до 1 000 000 руб/мес</p>
       </li>
-      <li class="mentorship__item mentorship__item--seller">
+      <li class="mentorship__item mentorship__item--seller" data-aos="fade-left" data-aos-duration="1000">
         <h3 class="mentorship__subtitle">Начинающим селлерам</h3>
         <p class="mentorship__descr">Продавцы, которые только начали и делают ежемесячный оборот до 200 тыс. руб.</p>
       </li>
-      <li class="mentorship__item mentorship__item--newbies">
+      <li class="mentorship__item mentorship__item--newbies" data-aos="fade-left" data-aos-duration="1000">
         <h3 class="mentorship__subtitle">Новичкам</h3>
         <p class="mentorship__descr">Тем, кто прошёл курсы по WB и запустил продажи, но не получил результаты</p>
       </li>
-      <li class="mentorship__item mentorship__item--managers">
+      <li class="mentorship__item mentorship__item--managers" data-aos="fade-left" data-aos-duration="1000">
         <h3 class="mentorship__subtitle">Менеджерам</h3>
         <p class="mentorship__descr">Тем, кто ведёт кабинеты продавцов и хочет повысить экспертность</p>
       </li>
