--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -2,7 +2,8 @@
   <div class="container">
     <h2 class="program__title title">Программа курса</h2>
     <div class="program__accordions">
-      <div class="program__accordion accordion accordion--1 is-open">
+      <div class="program__accordion accordion accordion--1 is-open" data-aos="fade-up" data-aos-duration="1000"
+        data-aos-anchor-placement="center-bottom">
         <div class="accordion__top">
           <span class="accordion__module">Модуль № 1</span>
           <span class="accordion__title">Тестирование спроса и поиск точек роста</span>
@@ -34,7 +35,8 @@
         </div>
         <button class="accordion__control btn-reset" aria-expanded="false">Подробнее</button>
       </div>
-      <div class="program__accordion accordion accordion--2">
+      <div class="program__accordion accordion accordion--2" data-aos="fade-up" data-aos-duration="1000"
+        data-aos-anchor-placement="center-bottom">
         <div class="accordion__top">
           <span class="accordion__module">Модуль № 2</span>
           <span class="accordion__title">Закупка и продажа</span>
@@ -69,7 +71,8 @@
         </div>
         <button class="accordion__control btn-reset" aria-expanded="false">Подробнее</button>
       </div>
-      <div class="program__accordion accordion accordion--3">
+      <div class="program__accordion accordion accordion--3" data-aos="fade-up" data-aos-duration="1000"
+        data-aos-anchor-placement="center-bottom">
         <div class="accordion__top">
           <span class="accordion__module">Модуль № 3</span>
           <span class="accordion__title">Маркетинг и клиентский сервис</span>
@@ -103,7 +106,8 @@
         </div>
         <button class="accordion__control btn-reset" aria-expanded="false">Подробнее</button>
       </div>
-      <div class="program__accordion accordion accordion--4">
+      <div class="program__accordion accordion accordion--4" data-aos="fade-up" data-aos-duration="1000"
+        data-aos-anchor-placement="center-bottom">
         <div class="accordion__top">
           <span class="accordion__module">Модуль № 4</span>
           <span class="accordion__title">Масштабирование</span>
@@ -143,12 +147,12 @@
       </div>
     </div>
     <div class="program__apply apply">
-      <div class="apply__content">
+      <div class="apply__content" data-aos="fade-left" data-aos-duration="1000">
         <h5 class="apply__title">как стать участником?</h5>
         <span class="apply__descr">Наставничество - формат работы, который не всем подходит. Поэтому я лично отбираю
           каждого, с кем будем работать. Отбор начинается с диагностики вашего бизнеса</span>
       </div>
-      <form class="apply__form program-form">
+      <form class="apply__form program-form" data-aos="fade-right" data-aos-duration="1000">
         <label class="apply__label">
           <input class="apply__input input-name-program input-reset" type="text" name="name" placeholder="Имя">
         </label>
