--- a/src/partials/tariffs.html
+++ b/src/partials/tariffs.html
@@ -4,7 +4,7 @@
     <div class="tariffs__items swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="tariffs__info">
+          <div class="tariffs__info" data-aos="fade-up" data-aos-duration="600">
             <div class="tariffs__top">
               <h3 class="tariffs__type">Стандарт</h3>
               <span class="tariffs__time">6 недель</span>
@@ -43,7 +43,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="tariffs__info">
+          <div class="tariffs__info" data-aos="fade-up" data-aos-duration="800">
             <div class="tariffs__top">
               <h3 class="tariffs__type">Бизнес</h3>
               <span class="tariffs__time">8 недель</span>
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="tariffs__info tariffs__info--current">
+          <div class="tariffs__info tariffs__info--current" data-aos="fade-up" data-aos-duration="1000">
             <div class="tariffs__top">
               <h3 class="tariffs__type">VIP</h3>
               <span class="tariffs__time">3 месяца</span>
