--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -2,15 +2,4 @@
 @import "./vendor/accordion";
 @import "../../node_modules/swiper/swiper-bundle.min";
 @import "../../node_modules/choices.js/public/assets/styles/choices";
-
-// стили для модального окна
-// @import "../../node_modules/graph-modal/dist/graph-modal.min"
-
-// стили для табов
-// @import "../../node_modules/graph-tabs/dist/graph-tabs.min"
-
-// стили для библиотеки aos
-// @import "../../node_modules/aos/dist/aos";
-
-// стили для свайпера
-// @import "../../node_modules/swiper/swiper-bundle.min";
+@import "../../node_modules/aos/dist/aos";
