--- a/src/partials/answers.html
+++ b/src/partials/answers.html
@@ -86,7 +86,7 @@
             aria-label="Введите ваш Email">
         </label>
         <label class="apply__label">
-          <input class="apply__input input-reset input-name" type="text" name="text" placeholder="Ваш магазин на WB"
+          <input class="apply__input input-reset input-link" type="text" name="text" placeholder="Ваш магазин на WB"
             aria-label="Укажите ИП или введите ссылку на ваш сайт,если нет - оставьте поле пустым">
           <span class="apply__info">Укажите ИП, название или ссылку (если нет — оставьте поле пустым)</span>
         </label>
